finished general design

--- a/allometr_flexdashboard.Rmd
+++ b/allometr_flexdashboard.Rmd
@@ -12,7 +12,8 @@ library(flexdashboard)
 library(tidyverse)
 library(shiny)
 library(shinyjs)
-# library(DT)
+library(plotly)
+library(writexl)
 
 # database
 allometr_db <- pool::dbPool(
@@ -35,6 +36,9 @@ Sidebar {.sidebar}
 #### Especify the desired constraints for the allometries:
 
 ```{r}
+## TODO better input logic for autodetect available values
+## TODO order of inputs, first variables, then other stuff
+
 # shinyjs
 useShinyjs(rmd = TRUE)
 
@@ -195,8 +199,8 @@ filtering_expr <- shiny::reactive({
     functional_group_level %in% !! input$functgroup,
     functional_group_name %in% !! input$functgroup_values_input,
     dependent_var %in% !! input$depvar,
-    independent_var_1 %in% !! input$indepvars ||
-      independent_var_2 %in% !! input$indepvars ||
+    independent_var_1 %in% !! input$indepvars |
+      independent_var_2 %in% !! input$indepvars |
       independent_var_3 %in% !! input$indepvars,
     cubication_shape %in% !! input$cubication,
     special_parameter %in% !! input$specialparam
@@ -216,10 +220,10 @@ filtering_expr <- shiny::reactive({
 })
 ```
 
-`r glue::glue("Page {rnorm(1)}: General info")`
+Glance
 =====================================
 
-Column {data-width=200}
+Column {data-width=150}
 -------------------------------------
 
 ### Equations available
@@ -248,25 +252,286 @@ renderTable({
 }, align = 'c')
 ```
 
-Column {data-width=600}
+Column {data-width=200}
 -------------------------------------
 
-### Chart 4
+### Independent variables available
     
-```{r}
+```{r indep_var}
+compute_indep_vars <- reactive({
+  allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    select(starts_with('independent_')) %>%
+    flatten_chr() %>%
+    unique() %>%
+    magrittr::extract(!is.na(.)) %>%
+    length()
+})
 
+renderValueBox({
+  valueBox(compute_indep_vars(), icon = 'fa-chart-line')
+})
 
 ```
 
-### Chart 5
+###
 
-```{r}
+```{r indep_var_plot}
+# renderHighchart({
+#   allometries_table %>%
+#     dplyr::filter(!!! filtering_expr()) %>%
+#     gather('indep_var_order', 'indep_vars', starts_with('independent_')) %>%
+#     pull(indep_vars) %>%
+#     hchart(type = 'column', name = 'Allometries') %>%
+#     hc_yAxis(
+#       title = list(text = 'Number of equations')
+#     ) %>%
+#     hc_legend() %>%
+#     hc_add_theme(hc_theme_flatdark())
+# })
+# renderPlot({
+#   allometries_table %>%
+#     dplyr::filter(!!! filtering_expr()) %>%
+#     gather('indep_var_order', 'indep_vars', starts_with('independent_')) %>%
+#     filter(!is.na(indep_vars)) %>%
+#     ggplot() +
+#     geom_bar(aes(x = indep_vars, fill = indep_vars), show.legend = FALSE)
+# })
+renderPlotly({
+  p <- allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    gather('indep_var_order', 'indep_vars', starts_with('independent_')) %>%
+    filter(!is.na(indep_vars)) %>%
+    ggplot() +
+    geom_bar(aes(x = indep_vars, fill = indep_vars), show.legend = FALSE) +
+    scale_fill_viridis_d() +
+    guides(fill = FALSE)
+  
+  ggplotly(p, tooltip = 'y') %>% hide_legend()
+})
+```
+
+### Spatial ambits
+    
+```{r spatial_ambits}
+compute_spatial_ambits <- reactive({
+  allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    select(starts_with('spatial_'))
+})
+
+renderValueBox({
+  valueBox(
+    compute_spatial_ambits() %>% pull(spatial_level) %>% unique() %>% length(),
+    icon = 'fa-chart-line'
+  )
+})
+```
+
+### Spatial names
+    
+```{r spatial_names}
+compute_spatial_names <- reactive({
+  allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    select(starts_with('spatial_'))
+})
+
+renderValueBox({
+  valueBox(
+    compute_spatial_names() %>% pull(spatial_name) %>% unique() %>% length(),
+    icon = 'fa-chart-line'
+  )
+})
+```
+
+### 
+
+```{r spatial_plot}
+# renderHighchart({
+#   allometries_table %>%
+#     dplyr::filter(!!! filtering_expr()) %>%
+#     count(spatial_level) %>%
+#     hchart(type = 'column', name = 'Allometries', hcaes(x = spatial_level, y = n, group = spatial_level)) %>%
+#     hc_yAxis(
+#       title = list(text = 'Number of equations')
+#     ) %>%
+#     hc_legend() %>%
+#     hc_add_theme(hc_theme_flatdark())
+# })
+# renderPlot({
+#   allometries_table %>%
+#     dplyr::filter(!!! filtering_expr()) %>%
+#     count(spatial_level, spatial_name) %>%
+#     ggplot() +
+#     geom_col(aes(x = spatial_level, y = n, fill = spatial_name), show.legend = FALSE)
+# })
+renderPlotly({
+  p <- allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    count(spatial_level, spatial_name) %>%
+    ggplot() +
+    geom_col(aes(x = spatial_level, y = n, fill = spatial_name), show.legend = FALSE) +
+    scale_fill_viridis_d() +
+    guides(fill = FALSE)
+  
+  ggplotly(p, tooltip = c('y', 'fill')) %>% hide_legend()
+})
+```
+
+
+Column {data-width=200}
+-------------------------------------
+
+### Species
+
+```{r species_vb}
+compute_functional_groups <- reactive({
+  allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    select(starts_with('functional_'))
+})
+
+renderValueBox({
+  valueBox(
+    compute_functional_groups() %>%
+      distinct() %>% 
+      filter(functional_group_level == 'species') %>%
+      pull(functional_group_level) %>%
+      length(),
+    icon = 'fa-chart-line'
+  )
+})
 
 ```
 
-   
-Inspecting the allometries
+### Genus
+
+```{r genus_vb}
+renderValueBox({
+  valueBox(
+    compute_functional_groups() %>%
+      distinct() %>% 
+      filter(functional_group_level == 'genus') %>%
+      pull(functional_group_level) %>%
+      length(),
+    icon = 'fa-chart-line'
+  )
+})
+```
+
+###
+
+```{r fgs_plot}
+# renderHighchart({
+#   compute_functional_groups() %>%
+#     count(spatial_level) %>%
+#     hchart(type = 'column', name = 'Allometries', hcaes(x = spatial_level, y = n, group = spatial_level)) %>%
+#     hc_yAxis(
+#       title = list(text = 'Number of equations')
+#     ) %>%
+#     hc_legend() %>%
+#     hc_add_theme(hc_theme_flatdark())
+# })
+# renderPlot({
+#   compute_functional_groups() %>%
+#     count(functional_group_level, functional_group_name) %>%
+#     ggplot() +
+#     geom_col(aes(x = functional_group_level, y = n, fill = functional_group_name), show.legend = FALSE)
+# })
+renderPlotly({
+  p <- compute_functional_groups() %>%
+    count(functional_group_level, functional_group_name) %>%
+    ggplot() +
+    geom_col(aes(x = functional_group_level, y = n, fill = functional_group_name)) +
+    scale_fill_viridis_d() +
+    guides(fill = FALSE)
+  
+  ggplotly(p, tooltip = c('y', 'fill')) %>% hide_legend()
+})
+```
+
+### Plant level allometries
+
+```{r plant_level_vb}
+compute_plant_level <- reactive({
+  allometries_table %>%
+    dplyr::filter(!!! filtering_expr()) %>%
+    select(starts_with('allometry_'))
+})
+
+renderValueBox({
+  valueBox(
+    compute_plant_level() %>% 
+      filter(allometry_level == 'tree') %>%
+      pull(allometry_name) %>%
+      length(),
+    icon = 'fa-chart-line'
+  )
+})
+
+```
+
+### Organ level allometries
+
+```{r plant_level_organ_vb}
+renderValueBox({
+  valueBox(
+    compute_plant_level() %>% 
+      filter(allometry_level == 'organ') %>%
+      pull(allometry_name) %>%
+      length(),
+    icon = 'fa-chart-line'
+  )
+})
+```
+
+
+Table {data-orientation=rows}
 =====================================
+
+Row {data-height=50}
+-------------------------------------
+
+###
+
+```{r save_table}
+downloadLink('save_csv', 'csv')
+output$save_csv <- downloadHandler(
+  filename = function() {
+    paste("allometries_", Sys.Date(), '.csv', sep = '')
+  },
+  content = function(file) {
+    
+    data_res <- allometries_table %>%
+    dplyr::filter(!!! filtering_expr())
+    
+    write_csv(data_res, file)
+  }
+)
+```
+
+###
+
+```{r save_table_2}
+downloadLink('save_xlsx', 'xlsx')
+output$save_xlsx <- downloadHandler(
+  filename = function() {
+    paste("allometries_", Sys.Date(), '.xlsx', sep = '')
+  },
+  content = function(file) {
+    
+    data_res <- allometries_table %>%
+    dplyr::filter(!!! filtering_expr())
+    
+    write_xlsx(data_res, file)
+  }
+)
+```
+
+
+Row
+-------------------------------------
 
 ### Table
     
@@ -287,17 +552,33 @@ Inspecting the allometries
 #       )
 #     )
 # })
-renderTable({
-  allometries_table %>%
+# renderTable({
+#   allometries_table %>%
+#     dplyr::filter(!!! filtering_expr())
+# }, digits = 2)
+DT::renderDT({
+  dt_data <- allometries_table %>%
     dplyr::filter(!!! filtering_expr())
-}, digits = 2)
+  
+  dt_data %>%
+    DT::datatable(
+      class = 'compact hover nowrap row-border order-column',
+      options = list(
+        dom = 'tp',
+        pageLength = 50,
+        columnDefs = list(list(className = 'dt-right', targets = '_all'))
+      )
+    ) %>%
+    DT::formatRound(dt_data %>% map_lgl(is.numeric), digits = 2)
+})
 ```
 
-Using the allometries
+Calculate
 =====================================
 
-### No se muy bien que va a haber aqui
+### Por desarrollar
 
 ```{r}
+
 ```
 
